@@ -59,9 +59,17 @@ import com.sun.star.lang.XComponent;
 import com.sun.star.lang.XMultiServiceFactory;
 import com.sun.star.lang.XServiceInfo;
 import com.sun.star.container.XNamed;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 public class FormHandler
 {
+    private static final String CHECKBOX = "CheckBox";
+    private static final String DATEFIELD = "DateField";
+    private static final String FORMATTEDFIELD = "FormattedField";
+    private static final String IMAGECONTROL = "ImageControl";
+    private static final String TEXTFIELD = "TextField";
+    private static final String TIMEFIELD = "TimeField";
 
     public XFormsSupplier xFormsSupplier;
     public XMultiServiceFactory xMSFDoc;
@@ -108,12 +116,12 @@ public class FormHandler
     public FormHandler(XMultiServiceFactory _xMSF, XTextDocument xTextDocument)
     {
         this.xMSF = _xMSF;
-        xDrawPageSupplier = (XDrawPageSupplier) UnoRuntime.queryInterface(XDrawPageSupplier.class, xTextDocument);
+        xDrawPageSupplier = UnoRuntime.queryInterface(XDrawPageSupplier.class, xTextDocument);
         xDrawPage = xDrawPageSupplier.getDrawPage();
-        xFormsSupplier = (XFormsSupplier) UnoRuntime.queryInterface(XFormsSupplier.class, xDrawPage);
-        xShapeGrouper = (XShapeGrouper) UnoRuntime.queryInterface(XShapeGrouper.class, xDrawPage);
-        xControlAccess = (XControlAccess) UnoRuntime.queryInterface(XControlAccess.class, xTextDocument.getCurrentController());
-        xMSFDoc = (XMultiServiceFactory) UnoRuntime.queryInterface(XMultiServiceFactory.class, xTextDocument);
+        xFormsSupplier = UnoRuntime.queryInterface(XFormsSupplier.class, xDrawPage);
+        xShapeGrouper = UnoRuntime.queryInterface(XShapeGrouper.class, xDrawPage);
+        xControlAccess = UnoRuntime.queryInterface(XControlAccess.class, xTextDocument.getCurrentController());
+        xMSFDoc = UnoRuntime.queryInterface(XMultiServiceFactory.class, xTextDocument);
         sModelServices[SOLABEL] = "com.sun.star.form.component.FixedText";
         sModelServices[SOTEXTBOX] = "com.sun.star.form.component.TextField";
         sModelServices[SOCHECKBOX] = "com.sun.star.form.component.CheckBox";
@@ -124,30 +132,30 @@ public class FormHandler
         sModelServices[SOIMAGECONTROL] = "com.sun.star.form.component.DatabaseImageControl";
 
         oControlData = new ControlData[22];
-        oControlData[0] = createControlData(DataType.BIT,          SOCHECKBOX, "CheckBox", "CheckBox", false);
-        oControlData[1] = createControlData(DataType.BOOLEAN,      SOCHECKBOX, "CheckBox", "CheckBox", false);
-        oControlData[2] = createControlData(DataType.TINYINT,      SONUMERICCONTROL, "FormattedField", "FormattedField", false);
-        oControlData[3] = createControlData(DataType.SMALLINT,     SONUMERICCONTROL, "FormattedField", "FormattedField", false);
-        oControlData[4] = createControlData(DataType.INTEGER,      SONUMERICCONTROL, "FormattedField", "FormattedField", false);
-        oControlData[5] = createControlData(DataType.BIGINT,       SONUMERICCONTROL, "FormattedField", "FormattedField", false);
-        oControlData[6] = createControlData(DataType.FLOAT,        SONUMERICCONTROL, "FormattedField", "FormattedField", false);
-        oControlData[7] = createControlData(DataType.REAL,         SONUMERICCONTROL, "FormattedField", "FormattedField", false);
-        oControlData[8] = createControlData(DataType.DOUBLE,       SONUMERICCONTROL, "FormattedField", "FormattedField", false);
-        oControlData[9] = createControlData(DataType.NUMERIC,      SONUMERICCONTROL, "FormattedField", "FormattedField", false);
-        oControlData[10] = createControlData(DataType.DECIMAL,     SONUMERICCONTROL, "FormattedField", "FormattedField", false);
-        oControlData[11] = createControlData(DataType.CHAR,        SOTEXTBOX, "TextField", "TextField", false);
-        oControlData[12] = createControlData(DataType.VARCHAR,     SOTEXTBOX, "TextField", "TextField", true);
-        oControlData[13] = createControlData(DataType.LONGVARCHAR, SOTEXTBOX, "TextField", "TextField", true);
-        oControlData[14] = createControlData(DataType.DATE,        SODATECONTROL, "DateField", "DateField", false);
-        oControlData[15] = createControlData(DataType.TIME,        SOTIMECONTROL, "TimeField", "TimeField", false);
-        oControlData[16] = createControlData(DataType.TIMESTAMP,   SODATECONTROL, "DateField", "TextField", false);
+        oControlData[0] = createControlData(DataType.BIT,          SOCHECKBOX, CHECKBOX, CHECKBOX, false);
+        oControlData[1] = createControlData(DataType.BOOLEAN,      SOCHECKBOX, CHECKBOX, CHECKBOX, false);
+        oControlData[2] = createControlData(DataType.TINYINT,      SONUMERICCONTROL, FORMATTEDFIELD, FORMATTEDFIELD, false);
+        oControlData[3] = createControlData(DataType.SMALLINT,     SONUMERICCONTROL, FORMATTEDFIELD, FORMATTEDFIELD, false);
+        oControlData[4] = createControlData(DataType.INTEGER,      SONUMERICCONTROL, FORMATTEDFIELD, FORMATTEDFIELD, false);
+        oControlData[5] = createControlData(DataType.BIGINT,       SONUMERICCONTROL, FORMATTEDFIELD, FORMATTEDFIELD, false);
+        oControlData[6] = createControlData(DataType.FLOAT,        SONUMERICCONTROL, FORMATTEDFIELD, FORMATTEDFIELD, false);
+        oControlData[7] = createControlData(DataType.REAL,         SONUMERICCONTROL, FORMATTEDFIELD, FORMATTEDFIELD, false);
+        oControlData[8] = createControlData(DataType.DOUBLE,       SONUMERICCONTROL, FORMATTEDFIELD, FORMATTEDFIELD, false);
+        oControlData[9] = createControlData(DataType.NUMERIC,      SONUMERICCONTROL, FORMATTEDFIELD, FORMATTEDFIELD, false);
+        oControlData[10] = createControlData(DataType.DECIMAL,     SONUMERICCONTROL, FORMATTEDFIELD, FORMATTEDFIELD, false);
+        oControlData[11] = createControlData(DataType.CHAR,        SOTEXTBOX, TEXTFIELD, TEXTFIELD, false);
+        oControlData[12] = createControlData(DataType.VARCHAR,     SOTEXTBOX, TEXTFIELD, TEXTFIELD, true);
+        oControlData[13] = createControlData(DataType.LONGVARCHAR, SOTEXTBOX, TEXTFIELD, TEXTFIELD, true);
+        oControlData[14] = createControlData(DataType.DATE,        SODATECONTROL, DATEFIELD, DATEFIELD, false);
+        oControlData[15] = createControlData(DataType.TIME,        SOTIMECONTROL, TIMEFIELD, TIMEFIELD, false);
+        oControlData[16] = createControlData(DataType.TIMESTAMP,   SODATECONTROL, DATEFIELD, TEXTFIELD, false);
         // oImageControlData = new ControlData[4];
-        oControlData[17] = createControlData(DataType.BINARY,      SOIMAGECONTROL, "ImageControl", "TextField", false);
-        oControlData[18] = createControlData(DataType.VARBINARY,   SOIMAGECONTROL, "ImageControl", "TextField", false);
-        oControlData[19] = createControlData(DataType.LONGVARBINARY, SOIMAGECONTROL, "ImageControl", "TextField", false);
-        oControlData[20] = createControlData(DataType.BLOB,        SOIMAGECONTROL, "ImageControl", "TextField", false);
+        oControlData[17] = createControlData(DataType.BINARY,      SOIMAGECONTROL, IMAGECONTROL, TEXTFIELD, false);
+        oControlData[18] = createControlData(DataType.VARBINARY,   SOIMAGECONTROL, IMAGECONTROL, TEXTFIELD, false);
+        oControlData[19] = createControlData(DataType.LONGVARBINARY, SOIMAGECONTROL, IMAGECONTROL, TEXTFIELD, false);
+        oControlData[20] = createControlData(DataType.BLOB,        SOIMAGECONTROL, IMAGECONTROL, TEXTFIELD, false);
 
-        oControlData[21] = createControlData(DataType.OTHER,       SOIMAGECONTROL, "ImageControl", "TextField", false);
+        oControlData[21] = createControlData(DataType.OTHER,       SOIMAGECONTROL, IMAGECONTROL, TEXTFIELD, false);
     }
 
     public int getControlType(int _fieldtype)
@@ -156,8 +164,7 @@ public class FormHandler
         {
             if (oControlData[i].DataType == _fieldtype)
             {
-                final int nType = oControlData[i].ControlType;
-                return nType;
+                return oControlData[i].ControlType;
             }
         }
         return -1;
@@ -184,7 +191,7 @@ public class FormHandler
     public void initializeBasicControlValues()
     {
         Control oLabelControl = new Control(this, SOLABEL, new Point(), new Size());
-        XDevice xDevice = (XDevice) UnoRuntime.queryInterface(XDevice.class, oLabelControl.xWindowPeer);
+        XDevice xDevice = UnoRuntime.queryInterface(XDevice.class, oLabelControl.xWindowPeer);
         iXPixelFactor = (int) (100000 / xDevice.getInfo().PixelPerMeterX);
         iYPixelFactor = (int) (100000 / xDevice.getInfo().PixelPerMeterY);
 
@@ -209,8 +216,7 @@ public class FormHandler
 
     public XNameContainer getDocumentForms()
     {
-        XNameContainer xNamedForms = xFormsSupplier.getForms();
-        return xNamedForms;
+        return xFormsSupplier.getForms();
     }
 
     public String getValueofHiddenControl(XNameAccess xNamedForm, String ControlName, String sMsg) throws com.sun.star.wizards.document.FormHandler.UnknownHiddenControlException
@@ -219,8 +225,7 @@ public class FormHandler
         {
             if (xNamedForm.hasByName(ControlName))
             {
-                String ControlValue = AnyConverter.toString(com.sun.star.wizards.common.Helper.getUnoPropertyValue(xNamedForm.getByName(ControlName), "HiddenValue"));
-                return ControlValue;
+                return AnyConverter.toString(com.sun.star.wizards.common.Helper.getUnoPropertyValue(xNamedForm.getByName(ControlName), "HiddenValue"));
             }
             else
             {
@@ -238,7 +243,7 @@ public class FormHandler
         try
         {
             XInterface xHiddenControl;
-            if (xNameAccess.hasByName(ControlName) == true)
+            if (xNameAccess.hasByName(ControlName))
             {
                 xHiddenControl = (XInterface) AnyConverter.toObject(new Type(XInterface.class), xNameAccess.getByName(ControlName));
             }
@@ -249,9 +254,9 @@ public class FormHandler
             }
             Helper.setUnoPropertyValue(xHiddenControl, "HiddenValue", ControlValue);
         }
-        catch (Exception exception)
+        catch (Exception ex)
         {
-            exception.printStackTrace(System.out);
+            Logger.getLogger(FormHandler.class.getName()).log(Level.SEVERE, null, ex);
         }
     }
 
@@ -260,7 +265,7 @@ public class FormHandler
 
         public UnknownHiddenControlException(XNameAccess xNamedForm, String ControlName, String sMsgHiddenControlisMissing)
         {
-            XNamed xNamed = (XNamed) UnoRuntime.queryInterface(XNamed.class, xNamedForm);
+            XNamed xNamed = UnoRuntime.queryInterface(XNamed.class, xNamedForm);
             String FormName = xNamed.getName();
             sMsgHiddenControlisMissing = JavaTools.replaceSubString(sMsgHiddenControlisMissing, FormName, "<REPORTFORM>");
             sMsgHiddenControlisMissing = JavaTools.replaceSubString(sMsgHiddenControlisMissing, ControlName, "<CONTROLNAME>");
@@ -271,7 +276,7 @@ public class FormHandler
     public boolean hasFormByName(String _FormName)
     {
         xNamedFormContainer = getDocumentForms();
-        xNamedForms = (XNameAccess) UnoRuntime.queryInterface(XNameAccess.class, xNamedFormContainer);
+        xNamedForms = UnoRuntime.queryInterface(XNameAccess.class, xNamedFormContainer);
         return xNamedForms.hasByName(_FormName);
     }
 
@@ -285,9 +290,9 @@ public class FormHandler
                 xNamedFormContainer.removeByName(_FormName);
             }
         }
-        catch (com.sun.star.uno.Exception exception)
+        catch (com.sun.star.uno.Exception ex)
         {
-            exception.printStackTrace(System.out);
+            Logger.getLogger(FormHandler.class.getName()).log(Level.SEVERE, null, ex);
         }
     }
 
@@ -299,14 +304,14 @@ public class FormHandler
             {
                 if (belongsToForm(xDrawPage.getByIndex(i), _FormName))
                 {
-                    XShape xShape = (XShape) UnoRuntime.queryInterface(XShape.class, xDrawPage.getByIndex(i));
+                    XShape xShape = UnoRuntime.queryInterface(XShape.class, xDrawPage.getByIndex(i));
                     xDrawPage.remove(xShape);
                 }
             }
         }
         catch (Exception e)
         {
-            e.printStackTrace(System.out);
+            Logger.getLogger(FormHandler.class.getName()).log(Level.SEVERE, null, e);
         }
     }
 
@@ -318,26 +323,26 @@ public class FormHandler
         }
         catch ( WrappedTargetException e )
         {
-            e.printStackTrace( System.err );
+            Logger.getLogger(FormHandler.class.getName()).log(Level.SEVERE, null, e);
         }
         catch( final NoSuchElementException e )
         {
-            e.printStackTrace( System.err );
+            Logger.getLogger(FormHandler.class.getName()).log(Level.SEVERE, null, e);
         }
     }
 
     public boolean belongsToForm(Object _oDrawPageElement, String _FormName)
     {
-        XServiceInfo xServiceInfo = (XServiceInfo) UnoRuntime.queryInterface(XServiceInfo.class, _oDrawPageElement);
+        XServiceInfo xServiceInfo = UnoRuntime.queryInterface(XServiceInfo.class, _oDrawPageElement);
         if (xServiceInfo.supportsService("com.sun.star.drawing.ControlShape"))
         {
-            XControlShape xControlShape = (XControlShape) UnoRuntime.queryInterface(XControlShape.class, _oDrawPageElement);
+            XControlShape xControlShape = UnoRuntime.queryInterface(XControlShape.class, _oDrawPageElement);
             XControlModel xControlModel = xControlShape.getControl();
-            xServiceInfo = (XServiceInfo) UnoRuntime.queryInterface(XServiceInfo.class, xControlShape.getControl());
+            xServiceInfo = UnoRuntime.queryInterface(XServiceInfo.class, xControlShape.getControl());
             if (xServiceInfo.supportsService("com.sun.star.form.FormComponent"))
             {
-                XChild xChild = (XChild) UnoRuntime.queryInterface(XChild.class, xControlModel);
-                XNamed xNamed = (XNamed) UnoRuntime.queryInterface(XNamed.class, xChild.getParent());
+                XChild xChild = UnoRuntime.queryInterface(XChild.class, xControlModel);
+                XNamed xNamed = UnoRuntime.queryInterface(XNamed.class, xChild.getParent());
                 String sName = xNamed.getName();
                 return _FormName.equals(sName);
             }
@@ -355,7 +360,7 @@ public class FormHandler
                 oDBForm = xMSFDoc.createInstance("com.sun.star.form.component.Form");
                 _xNamedFormContainer.insertByName(_FormName, oDBForm);
                 XNameContainer xNamedForm;
-                xNamedForm = (XNameContainer) UnoRuntime.queryInterface(XNameContainer.class, oDBForm);
+                xNamedForm = UnoRuntime.queryInterface(XNameContainer.class, oDBForm);
                 return xNamedForm;
             }
             else
@@ -363,9 +368,9 @@ public class FormHandler
                 return getFormByName(_FormName);
             }
         }
-        catch (com.sun.star.uno.Exception exception)
+        catch (com.sun.star.uno.Exception e)
         {
-            exception.printStackTrace(System.out);
+            Logger.getLogger(FormHandler.class.getName()).log(Level.SEVERE, null, e);
             return null;
         }
     }
@@ -388,12 +393,12 @@ public class FormHandler
             if (xNamedForms.hasByName(_sname))
             {
                 Object oDBForm = AnyConverter.toObject(new Type(XInterface.class), Helper.getUnoObjectbyName(xNamedForms, _sname));
-                xNamedForm = (XNameContainer) UnoRuntime.queryInterface(XNameContainer.class, oDBForm);
+                xNamedForm = UnoRuntime.queryInterface(XNameContainer.class, oDBForm);
             }
         }
         catch (IllegalArgumentException e)
         {
-            e.printStackTrace(System.out);
+            Logger.getLogger(FormHandler.class.getName()).log(Level.SEVERE, null, e);
         }
         return xNamedForm;
     }
@@ -484,13 +489,13 @@ public class FormHandler
         {
             for (int i = 0; i < this.xDrawPage.getCount(); i++)
             {
-                XShape xShape = (XShape) UnoRuntime.queryInterface(XShape.class, xDrawPage.getByIndex(i));
+                XShape xShape = UnoRuntime.queryInterface(XShape.class, xDrawPage.getByIndex(i));
                 xShape.setPosition(new Point(this.iXNirwanaPos, this.iYNirwanaPos));
             }
         }
         catch (Exception e)
         {
-            e.printStackTrace(System.out);
+            Logger.getLogger(FormHandler.class.getName()).log(Level.SEVERE, null, e);
         }
     }
 
@@ -498,7 +503,7 @@ public class FormHandler
     {
         for (int i = this.xDrawPage.getCount(); i > -1; i--)
         {
-            XShape xShape = (XShape) UnoRuntime.queryInterface(XShape.class, xDrawPage.getByIndex(i));
+            XShape xShape = UnoRuntime.queryInterface(XShape.class, xDrawPage.getByIndex(i));
             removeShape(xShape);
         }
     }
@@ -510,7 +515,7 @@ public class FormHandler
     public void removeShape(XShape _xShape)
     {
         xDrawPage.remove(_xShape);
-        XComponent xComponent = (XComponent) UnoRuntime.queryInterface(XComponent.class, _xShape);
+        XComponent xComponent = UnoRuntime.queryInterface(XComponent.class, _xShape);
         xComponent.dispose();
     }
     // Destroy all Shapes in Nirwana
@@ -518,7 +523,7 @@ public class FormHandler
     {
         for (int i = this.xDrawPage.getCount(); i > -1; i--)
         {
-            XShape xShape = (XShape) UnoRuntime.queryInterface(XShape.class, xDrawPage.getByIndex(i));
+            XShape xShape = UnoRuntime.queryInterface(XShape.class, xDrawPage.getByIndex(i));
             if (xShape.getPosition().Y < this.iYNirwanaPos)
             {
                 xDrawPage.remove(xShape);
@@ -531,14 +536,14 @@ public class FormHandler
         try
         {
             Object oGroupShape = _xMSF.createInstance("com.sun.star.drawing.ShapeCollection");
-            XShapes xShapes = (XShapes) UnoRuntime.queryInterface(XShapes.class, oGroupShape);
+            XShapes xShapes = UnoRuntime.queryInterface(XShapes.class, oGroupShape);
             xShapes.add(_xLabelShape);
             xShapes.add(_xControlShape);
             return this.xShapeGrouper.group(xShapes);
         }
         catch (Exception e)
         {
-            e.printStackTrace(System.out);
+            Logger.getLogger(FormHandler.class.getName()).log(Level.SEVERE, null, e);
             return null;
         }
     }
@@ -583,12 +588,12 @@ public class FormHandler
     {
         try
         {
-            XPropertySet xPropertySet = (XPropertySet) UnoRuntime.queryInterface(XPropertySet.class, this.xMSFDoc.createInstance("com.sun.star.text.DocumentSettings"));
-            xPropertySet.setPropertyValue("DoNotCaptureDrawObjsOnPage", new Boolean(!_bCaptureObjects));
+            XPropertySet xPropertySet = UnoRuntime.queryInterface(XPropertySet.class, this.xMSFDoc.createInstance("com.sun.star.text.DocumentSettings"));
+            xPropertySet.setPropertyValue("DoNotCaptureDrawObjsOnPage", Boolean.valueOf(!_bCaptureObjects));
         }
-        catch (Exception ex)
+        catch (Exception e)
         {
-            ex.printStackTrace(System.out);
+            Logger.getLogger(FormHandler.class.getName()).log(Level.SEVERE, null, e);
         }
     }
 }
